feat: 移除vertx,改为原生http